--- a/blogs/test4.mdx
+++ b/blogs/test4.mdx
@@ -1,11 +1,9 @@
 ---
-title: Installation
-description: Create a new Next.js application with `create-next-app`. Set up TypeScript, styles, and configure your `next.config.js` file.
-related:
-  title: Next Steps
-  description: Learn about the files and folders in your Next.js project.
-  links:
-    - getting-started/project-structure
+title: Test 4
+date: '2023-04-09'
+author: Ebou Jobe
+type: Post
+description: Create a new Next.js application with . Set up TypeScript, styles, and configure your  file.
 ---
 
 System Requirements:
@@ -16,10 +14,6 @@ System Requirements:
 ## Automatic Installation
 
 We recommend starting a new Next.js app using `create-next-app`, which sets up everything automatically for you. To create a project, run:
-
-```bash filename="Terminal"
-npx create-next-app@latest
-```
 
 On installation, you'll see the following prompts:
 
@@ -44,10 +38,6 @@ After the prompts, `create-next-app` will create a folder with your project name
 ## Manual Installation
 
 To manually create a new Next.js app, install the required packages:
-
-```bash filename="Terminal"
-npm install next@latest react@latest react-dom@latest
-```
 
 Open your `package.json` file and add the following `scripts`:
 
@@ -81,8 +71,7 @@ Create an `app/` folder, then add a `layout.tsx` and `page.tsx` file. These will
 
 <Image
   alt='App Folder Structure'
-  srcLight='/docs/light/app-getting-started.png'
-  srcDark='/docs/dark/app-getting-started.png'
+  src='/course-image.png'
   width='1600'
   height='363'
 />
