--- a/blogs/test3.mdx
+++ b/blogs/test3.mdx
@@ -2,11 +2,8 @@
 title: Installation
 type: Post
 description: Create a new Next.js application with `create-next-app`. Set up TypeScript, styles, and configure your `next.config.js` file.
-related:
-  title: Next Steps
-  description: Learn about the files and folders in your Next.js project.
-  links:
-    - getting-started/project-structure
+author: Ebou Jobe,
+date: '2023/07/03'
 ---
 
 System Requirements:
