--- a/blogs/test4.mdx
+++ b/blogs/test4.mdx
@@ -1,7 +1,7 @@
 ---
-title: Test 4
+title: Changed me!
 date: '2023-04-09'
-author: Ebou Jobe
+author: youtube viewers
 type: Post
 description: Create a new Next.js application with . Set up TypeScript, styles, and configure your  file.
 ---
